<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtDay" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp" >

        <TextView
            android:id="@+id/timeStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtTimeStart" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtHyphen" />

        <TextView
            android:id="@+id/timeFinish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtTimeEnd" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/courseACR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtCourseAcronym"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp" >

        <TextView
            android:id="@+id/Building"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtBuilding"
            android:textColor="#0D4F8B" />

        <TextView
            android:id="@+id/txtBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtBar" />

        <TextView
            android:id="@+id/room"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtRoom" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp" >

        <TextView
            android:id="@+id/txtComment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtComment"
            android:textSize="10dp" />

        <TextView
            android:id="@+id/comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="2dp"
            android:text="@string/comment"
            android:textSize="10dp" />

    </LinearLayout>

</LinearLayout>