<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/txtCourseLevel1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtcourseLevel" />

        <TextView
            android:id="@+id/courseLevelSelected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtLevelDefault" />

        <TextView
            android:id="@+id/txtCourseCredits1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="@string/txtcourseCredits" />

        <TextView
            android:id="@+id/courseCreditsSelected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtcreditsDefault" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/courseNameSelected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/txtCourseName"
            android:textSize="20dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/txtLecturer1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtLecturer" />

        <TextView
            android:id="@+id/courseLecturerSelected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtLecturerName" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/txtDP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtDP" />

        <TextView
            android:id="@+id/courseDeliveryPeriodSelected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtSemesterDefault" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp" >

        <TextView
            android:id="@+id/txtURLSelected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/actualURL"
            android:textColor="#0D4F8B" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp" >

        <TextView
            android:id="@+id/txtDRPSSelected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/actualDRPS"
            android:textColor="#0D4F8B" />

    </LinearLayout>

</LinearLayout>