<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/course_row_layout"
    android:layout_height="match_parent"
    android:clickable="true"
    android:orientation="vertical"
    android:padding="5dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/txtcourseLevel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtcourseLevel" />

        <TextView
            android:id="@+id/courseLevel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtLevelDefault" />

        <TextView
            android:id="@+id/txtcourseCredits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="@string/txtcourseCredits" />

        <TextView
            android:id="@+id/courseCredits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtcreditsDefault" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <CheckBox
            android:id="@+id/courseSelected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="@string/txtCheckbox" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/txtLecturer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtLecturer" />

        <TextView
            android:id="@+id/courseLecturer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtLecturerName" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/txtDP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtDP" />

        <TextView
            android:id="@+id/courseDeliveryPeriod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtSemesterDefault" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp" >

        <TextView
            android:id="@+id/txtCourseURL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/actualURL"
            android:textColor="#0D4F8B"
            android:visibility="visible" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/txtcourseDRPS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/actualDRPS"
            android:textColor="#0D4F8B"
            android:visibility="visible" />

    </LinearLayout>

</LinearLayout>